@@ -39,6 +39,7 @@ depth: 1
  * Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp)
  * Fix broken formatting for MultiFieldPanel / FieldRowPanel permission kwarg docs (Matt Westcott)
  * Add helpful troubleshooting links and refine wording for getting started with development (Loveth Omokaro)
+ * Ensure search autocomplete overlay on mobile does not overflow the viewport (Ayman Makroo)
 
 ### Maintenance
 
